# Karsathi-Full-Project

./: .gitignore  CNAME  pyproject.toml  requirements.txt  server.py
database/: users.db
frontend/: converter.html  index.html  learn.html  login.html  register.html  speech_translate.html  text_to_speech.html  welcome.html
routes/: auth.py  convert.py  learn.py  predict.py
utils/: speech_to_text.py  text_to_speech.py
