[project]
name = "karsaathi"
version = "1.0.0"
description = "This is the KarSaathi web application developed by the team Hacktopus Primes for Smart PSIT Hackathon"
authors = ["Naitik Gupta", "Nistha Nigam", "Nilansh Mishra", "Ayushree", "Krishna Gupta", "Laxmi Narayan"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
